# dspdfviewer

./: .appveyor.yml  .codecov.yml  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CNAME  Gemfile  INSTALL  Makefile  README  README.md  _config.yml  adjustedlink.cpp  adjustedlink.h  debug.h  desktopsupport.cpp  desktopsupport.h  desktopsupportexceptions.cpp  desktopsupportexceptions.h  desktopsupportfactory.cpp  desktopsupportfactory.h  dspdfviewer.1  dspdfviewer.cpp  dspdfviewer.desktop  dspdfviewer.h  dspdfviewer.kdev4  dspdfviewer.qrc  dspdfviewer_de.ts  form.ui  format_sources  hacks_for_lucid.h  hyperlinkarea.cpp  hyperlinkarea.h  index.md  keybindings.ui  main.cpp  manpage-release.html  manpage.html  (+32 more)
.github/: CODEOWNERS
.github/workflows/: arch.yml  clang.yml  fixme-windows.txt  osx.yml  pages.yml  ubuntu.yml  windows.yml
Windows/: TOC.hhc  controls.html  license.html  style.css
_drafts/: website.md
_includes/: html_header.html
_layouts/: default.html
_travis/: compile  configure  install_dependencies  osx-install-dependencies  test
_travis/docker/: Dockerfile-buster  Dockerfile-experimental  build-and-test-software  build-docker-image  compile  test-clang  test-gcc
cmake/: compiler_appleclang.cmake  compiler_clang.cmake  compiler_gnu_gcc.cmake  compiler_msvc.cmake  compiler_unknown.cmake  compilers.cmake  external_libraries.cmake  filelists.cmake  platforms.cmake  qrc_embedding.cmake  version_number.cmake
css/: page-generator.css  styles.css
debian/: README  README.Debian  README.source  changelog  control  copyright  dspdfviewer.cron.d.ex  dspdfviewer.default.ex  dspdfviewer.doc-base.EX  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  manpage.sgml.ex  manpage.xml.ex  manpages  menu  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
desktopsupport/: generic.cpp  generic.h  i3.cpp  i3.h  win32.cpp  win32.h
docs/: .travis.yml  Makefile  _config.yml  dspdfviewer.1  index.md  manpage.html
docs/Windows/: Help.hhp  bugs.html  description.html  files.html  license.html  name.html  options.html  presenter.html  seealso.html  synopsis.html
docs/_includes/: html_header.html
docs/_layouts/: default.html
docs/_sass/: _page-generator.scss
docs/css/: pygments.css  styles.scss
docs/installation/: debian.md  gentoo.md  windows.md
docs/installation/debian/: jessie.md
docs/installation/source/: dependencies.md  git.md  options.md  stable.md
gentoo/: dspdfviewer-1.12.ebuild  dspdfviewer-1.13.ebuild  dspdfviewer-9999.ebuild
installation/: arch.md  daily-deb.md  deb-repository.md  debian.md  gentoo.md  index.md  macos.md  ubuntu.md  windows.md
installation/source/: options.md  stable.md
installation/ubuntu/: ppa.md
old/: index.html
src/: adjustedlink.cpp  adjustedlink.h  dspdfviewer.h  hyperlinkarea.cpp  pagepart.cpp  pagepart.h  pdfdocumentreference.h  pdfpagereference.cpp  pdfpagereference.h  pdfrenderfactory.h  pdfviewerwindow.ui  renderutils.cpp
testing/: .gitignore  CMakeLists.txt  test-images.cc  test-thumbnail-cmdline.cc  testhelpers.cc  testhelpers.hh  testrenderonepage.cc  testrunner.cc  testswapscreen-main.cc  testswapscreen.cc  testswapscreen.h  testswapscreen.hh  xorg.conf
testing/pdfs/: colored-rectangles.tex  external-link.tex  images.tex  many-many-pages.tex
translations/: dspdfviewer_de.ts  dspdfviewer_pt-br.ts
